refactor: move object mapper to a different package, move document api into core